--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^20.11.28",
+    "prisma": "^5.11.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
+  },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
-    "prisma": "^5.11.0"
+    "@prisma/client": "^5.11.0"
   }
 }
