--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "ES2020",
+    "moduleResolution": "Node",
     "lib": ["ES2020"],
+    "allowJs": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
@@ -12,5 +14,5 @@
     "noUnusedParameters": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./packages/*/src/**/*"]
+  "include": ["packages/**/*"]
 }
