--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,15 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "koa": "^2.15.1",
-    "koa-router": "^12.0.1"
+    "express": "^4.18.3"
   },
   "devDependencies": {
-    "@types/koa": "^2.15.0",
-    "@types/koa-router": "^7.4.8"
-  },
-  "peerDependencies": {
-    "eslint": "*",
-    "typescript": "*"
+    "@types/express": "^4",
+    "@types/node": "^20.11.28",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
